logs/mobility/build.make.040.log.stderr
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/mobility.cpp: In function ‘void mobilityStateMachine(const ros::TimerEvent&)’:
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/mobility.cpp:198:94: error: no match for call to ‘(std_msgs::String_<std::allocator<void> >::_data_type {aka std::basic_string<char>}) (const char [45])’
                                   log_msg.data("ALSA controller selected a new goal position");
                                                                                              ^
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/mobility.cpp: In function ‘void targetHandler(const ConstPtr&)’:
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/mobility.cpp:323:82: error: no match for call to ‘(std_msgs::String_<std::allocator<void> >::_data_type {aka std::basic_string<char>}) (const char [43])’
                         log_msg.data("Recorded a target with the ALSA controller");
                                                                                  ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
